--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,3 +44,8 @@ theme:
 extra_css:
   - assets/extra.css
 
+plugins:
+  - offline:
+      enabled: !ENV [OFFLINE, false]
+  - search:
+      enabled: true
