--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
   - naming.md
   - ha-checklist.md
 
+license: CC BY-NC-SA 3.0
 copyright: Copyright &copy; 2025 Jolla Mobile Ltd
 
 markdown_extensions:
@@ -33,6 +34,7 @@ markdown_extensions:
 
 theme:
   name: material
+  custom_dir: overrides
   logo: assets/sailfish_os_logo.svg
   favicon: assets/sailfish_os_favico.svg
   palette:
